[package]
name = "regex-anre"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"
description = "regex-anre is a brand new regex engine for Rust with JIT and ANRE language support."
homepage = "https://hemashushu.github.io/works/anre"
documentation = "https://hemashushu.github.io/works/anre"
repository = "https://github.com/hemashushu/regex-anre"
readme = "README.md"
keywords = ["regex", "regex-anre", "regex-jit", "anre", "jit"]
categories = []

[dependencies]

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
